fixed some layout issues + added a human shaking a robot's hand section

--- a/react/src/components/Footer/Footer.css
+++ b/react/src/components/Footer/Footer.css
@@ -4,12 +4,12 @@
 #footer {
     color: #fff;
     font-size: 14px;
-    background: #111;
+    background: #1e1e1e;
 }
 
 #footer .footer-top {
     padding: 60px 0 30px 0;
-    background: #1e1e1e;
+    background: #1B262C;
 }
 
 #footer .footer-top .footer-contact {
@@ -64,11 +64,9 @@
     padding: 10px 0;
     display: flex;
     align-items: center;
+    margin: 0;
 }
 
-#footer .footer-top .footer-links ul li:first-child {
-    padding-top: 0;
-}
 
 #footer .footer-top .footer-links ul a {
     color: rgba(255, 255, 255, 0.6);
