--- a/react/src/components/HeroSection/HeroSection.css
+++ b/react/src/components/HeroSection/HeroSection.css
@@ -9,31 +9,6 @@
     animation: glowing 2s infinite;
 }
 
-@keyframes glowing {
-    0% {
-        box-shadow:
-            0 0 10px rgba(34, 180, 215, 0.2),
-            0 0 20px rgba(34, 180, 215, 0.3),
-            0 0 30px rgba(34, 180, 215, 0.4),
-            0 0 40px rgba(34, 180, 215, 0.5);
-    }
-
-    50% {
-        box-shadow:
-            0 0 15px rgba(34, 180, 215, 0.3),
-            0 0 25px rgba(34, 180, 215, 0.4),
-            0 0 35px rgba(34, 180, 215, 0.5),
-            0 0 45px rgba(34, 180, 215, 0.6);
-    }
-
-    100% {
-        box-shadow:
-            0 0 10px rgba(34, 180, 215, 0.2),
-            0 0 20px rgba(34, 180, 215, 0.3),
-            0 0 30px rgba(34, 180, 215, 0.4),
-            0 0 40px rgba(34, 180, 215, 0.5);
-    }
-}
 
 #home #hero .dots-web {
     position: absolute;
@@ -76,5 +51,6 @@
     #home #hero .white-logo {
         height: 196px;
         width: 196px;
+        margin-top: 80px;
     }
 }
